feat: Add robust health checks for services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,72 @@
 services:
   ollama:
-    image: ollama/ollama
+    build:
+      context: .
+      dockerfile: ollama.Dockerfile
     ports:
       - "11434:11434"
     volumes:
       - ollama_data:/root/.ollama
     container_name: ollama
+    environment:
+      - OLLAMA_MODELS_TO_PULL=nomic-embed-text,llama3
+    healthcheck:
+      test: |
+        (
+          curl -s --fail http://localhost:11434/api/tags | grep -q 'nomic-embed-text' &&
+          curl -s --fail http://localhost:11434/api/tags | grep -q 'llama3'
+        ) || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 20
+
+  etcd:
+    image: quay.io/coreos/etcd:v3.5.14
+    container_name: milvus-etcd
+    environment:
+      - ETCD_AUTO_COMPACTION_MODE=revision
+      - ETCD_AUTO_COMPACTION_RETENTION=1000
+      - ETCD_QUOTA_BACKEND_BYTES=4294967296
+      - ETCD_SNAPSHOT_COUNT=50000
+    volumes:
+      - milvus_etcd:/etcd
+    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+
+  minio:
+    image: minio/minio:RELEASE.2023-03-20T20-16-18Z
+    container_name: milvus-minio
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9001:9001"
+      - "9000:9000"
+    volumes:
+      - milvus_minio:/data
+    command: minio server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
 
   milvus:
-    image: milvusdb/milvus:v2.4.4-standalone
+    image: milvusdb/milvus:v2.4.5
+    container_name: milvus
+    command: ["milvus", "run", "standalone"]
     ports:
       - "19530:19530"
       - "9091:9091"
     volumes:
-      - milvus_data:/milvus/data
-      - milvus_etcd:/milvus/etcd
-      - milvus_logs:/milvus/logs
-    container_name: milvus
+      - milvus_data:/var/lib/milvus
+    environment:
+      ETCD_ENDPOINTS: etcd:2379
+      MINIO_ADDRESS: minio:9000
+    depends_on:
+      etcd:
+        condition: service_started
+      minio:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
       interval: 30s
@@ -41,11 +91,12 @@ services:
       milvus:
         condition: service_healthy
       ollama:
-        condition: service_started
+        condition: service_healthy
     container_name: rag-forge-app
 
 volumes:
   ollama_data:
   milvus_data:
   milvus_etcd:
+  milvus_minio:
   milvus_logs: 
