feat: Migrate from Milvus to PostgreSQL and enhance UI
This commit migrates the vector database from Milvus to PostgreSQL with the pgvector extension, simplifying the architecture. It also enhances the Streamlit UI to display the model's thought process.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 fastapi
 uvicorn
-streamlit
-pymilvus==2.4.4
-langchain
-langchain-community
-ollama
-requests
 python-dotenv
-tiktoken 
+langchain
+langchain_community
+langchain-ollama
+ollama
+streamlit
+psycopg2-binary
+SQLAlchemy
+pgvector
+requests
+tiktoken
+tqdm
