--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,58 +20,22 @@ services:
       timeout: 5s
       retries: 20
 
-  etcd:
-    image: quay.io/coreos/etcd:v3.5.14
-    container_name: milvus-etcd
+  postgres:
+    image: pgvector/pgvector:pg16
+    container_name: postgres
     environment:
-      - ETCD_AUTO_COMPACTION_MODE=revision
-      - ETCD_AUTO_COMPACTION_RETENTION=1000
-      - ETCD_QUOTA_BACKEND_BYTES=4294967296
-      - ETCD_SNAPSHOT_COUNT=50000
-    volumes:
-      - milvus_etcd:/etcd
-    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
-
-  minio:
-    image: minio/minio:RELEASE.2023-03-20T20-16-18Z
-    container_name: milvus-minio
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      POSTGRES_DB: rag-forge
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
     ports:
-      - "9001:9001"
-      - "9000:9000"
+      - "5432:5432"
     volumes:
-      - milvus_minio:/data
-    command: minio server /data --console-address ":9001"
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-
-  milvus:
-    image: milvusdb/milvus:v2.4.5
-    container_name: milvus
-    command: ["milvus", "run", "standalone"]
-    ports:
-      - "19530:19530"
-      - "9091:9091"
-    volumes:
-      - milvus_data:/var/lib/milvus
-    environment:
-      ETCD_ENDPOINTS: etcd:2379
-      MINIO_ADDRESS: minio:9000
-    depends_on:
-      etcd:
-        condition: service_started
-      minio:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      test: ["CMD-SHELL", "pg_isready -U user -d rag-forge"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   app:
     build: .
@@ -82,13 +46,18 @@ services:
       - ./src:/app/src
       - ./data:/app/data
     environment:
-      - MILVUS_HOST=milvus
-      - MILVUS_PORT=19530
+      # PostgreSQL settings
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=rag-forge
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      # Ollama settings
       - OLLAMA_HOST=http://ollama:11434
       - EMBEDDING_MODEL=dengcao/Qwen3-Embedding-0.6B:Q8_0
       - LLM_MODEL=qwen3:1.7b
     depends_on:
-      milvus:
+      postgres:
         condition: service_healthy
       ollama:
         condition: service_healthy
@@ -101,7 +70,4 @@ services:
 
 volumes:
   ollama_data:
-  milvus_data:
-  milvus_etcd:
-  milvus_minio:
-  milvus_logs: 
+  postgres_data: 
