feat: Refactor Docker setup and enhance conversational capabilities in RAG-Forge application

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     image: pgvector/pgvector:pg16
     container_name: postgres
     environment:
-      POSTGRES_DB: rag-forge
+      POSTGRES_DB: rag_forge
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
     ports:
@@ -32,40 +32,35 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d rag-forge"]
+      test: ["CMD-SHELL", "pg_isready -U user -d rag_forge"]
       interval: 10s
       timeout: 5s
       retries: 5
 
   app:
-    build: .
+    build:
+      context: ..
+      dockerfile: RAG-Forge/Dockerfile
     ports:
       - "8000:8000" # FastAPI
       - "8501:8501" # Streamlit
     volumes:
-      - ./src:/app/src
-      - ./.secrets:/app/.secrets
+      - ./data:/app/data
+      - ../model-forge-lib:/app/model-forge-lib
+      - ./.model_forge_config:/root/.config/model-forge
     environment:
-      # PostgreSQL settings
+      - MODEL_FORGE_CONFIG_DIR=/root/.config/model-forge
       - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_DB=rag-forge
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
-      # Ollama settings
       - OLLAMA_HOST=http://ollama:11434
       - EMBEDDING_MODEL=dengcao/Qwen3-Embedding-0.6B:Q8_0
-      - LLM_MODEL=qwen3:1.7b
-      # LLM Provider
-      - LLM_PROVIDER=github_copilot
-      - GITHUB_COPILOT_TOKEN_PATH=/app/.secrets/github_token.json
-      - GITHUB_COPILOT_MODEL=claude-3.7-sonnet-thought
+    container_name: rag-forge-app
     depends_on:
       postgres:
         condition: service_healthy
       ollama:
         condition: service_healthy
-    container_name: rag-forge-app
     healthcheck:
       test: ["CMD", "test", "-f", "/tmp/ready"]
       interval: 5s
